- Solucionado bug cuando usamos una secuencia sin ejercicio, junto a otras con ejercicios y hay documentos previos en las otras. - Añadida una pestaña a la página de secuencia para ver los documentos afectados.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -595,6 +595,7 @@
     "footer-text": "Text peu de pàgina",
     "for-admins": "Per administradors",
     "for-all": "Per a tothom",
+    "for-all-exercises": "Para todos los ejercicios",
     "for-purchase": "Es compra",
     "for-sale": "És a la venda",
     "foresee": "Preveure",
@@ -877,6 +878,8 @@
     "marked-as-homepage": "Marcada com a pàgina d'inici. Prem de nou per a desmarcar.",
     "max-input-vars-warning": "Amb la configuració actual de PHP (max_input_vars) no podràs treballar amb documents de més de %numlines% línies.",
     "max-risk": "Risc màxim",
+    "maximum-amount-with-cifnif": "Màxim import amb CIF\/NIF",
+    "maximum-amount-without-cifnif": "Màxim import sense CIF\/NIF",
     "maximum-stock": "Stock màxim",
     "may": "Maig",
     "mega-search": "MegaCercador",
@@ -894,6 +897,8 @@
     "meta-description": "FacturaScripts és un programari de facturació i comptabilitat per a pimes. Es tracta de programari lliure sota la llicència GNU\/LGPL.",
     "method-payment": "Mètode de pagament",
     "mime-type": "Mime Type",
+    "minimum-amount-with-cifnif": "Mínim import amb CIF\/NIF",
+    "minimum-amount-without-cifnif": "Mínim import sense CIF\/NIF",
     "minimum-stock": "Stock mínim",
     "minutes": "Minuts",
     "mismatched-accounting-entry": "Assentament desquadrat",
