--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -595,6 +595,7 @@
     "footer-text": "Footer text",
     "for-admins": "For administrators",
     "for-all": "For everyone",
+    "for-all-exercises": "Para todos los ejercicios",
     "for-purchase": "For purchase",
     "for-sale": "For sale",
     "foresee": "Foresee",
@@ -877,6 +878,8 @@
     "marked-as-homepage": "Marked as homepage. Press again to uncheck.",
     "max-input-vars-warning": "With the current PHP configuration (max_input_vars) you will not be able to work with documents of more than %numlines% lines.",
     "max-risk": "Maximum risk",
+    "maximum-amount-with-cifnif": "Maximum amount with CIF\/NIF",
+    "maximum-amount-without-cifnif": "Maximum amount without CIF\/NIF",
     "maximum-stock": "Maximum stock",
     "may": "May",
     "mega-search": "Mega-Search",
@@ -894,6 +897,8 @@
     "meta-description": "FacturaScripts is a billing and accounting software for SMEs. It is free software under the GNU\/LGPL license.",
     "method-payment": "Method of payment",
     "mime-type": "Mime Type",
+    "minimum-amount-with-cifnif": "Minimum amount with CIF\/NIF",
+    "minimum-amount-without-cifnif": "Minimum amount without CIF\/NIF",
     "minimum-stock": "Minimum stock",
     "minutes": "Minutes",
     "mismatched-accounting-entry": "Mismatched accounting entry",
