--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -595,6 +595,7 @@
     "footer-text": "Orri-oinaren testua",
     "for-admins": "Administratzaileentzat",
     "for-all": "Guztientzat",
+    "for-all-exercises": "Para todos los ejercicios",
     "for-purchase": "Erosgaia",
     "for-sale": "Salgai",
     "foresee": "Aurreikusi",
@@ -877,6 +878,8 @@
     "marked-as-homepage": "Hasierako orri gisa markatua. Sakatu berriz desmarkatzeko.",
     "max-input-vars-warning": "Oraingo PHP konfigurazioarekin (max_input_vars) ezin izango duzu %numlines% lerro baino gehiago dituen dokumentuekin lan egin.",
     "max-risk": "Gehienezko arriskua",
+    "maximum-amount-with-cifnif": "Gehienezko zenbatekoa IFK\/IFZrekin",
+    "maximum-amount-without-cifnif": "Gehieneko zenbatekoa IFK\/IFZ gabe",
     "maximum-stock": "Stock maximoa",
     "may": "Mayo",
     "mega-search": "MegaBuscador",
@@ -894,6 +897,8 @@
     "meta-description": "FacturaScripts ETE-entzako fakturazio eta kontabilitate softwarea da. GNU\/LGPL lizentziapeko software librea da.",
     "method-payment": "Ordainketa mota",
     "mime-type": "Mime Mota",
+    "minimum-amount-with-cifnif": "Gutxieneko zenbatekoa IFK\/IFZrekin",
+    "minimum-amount-without-cifnif": "Gutxieneko zenbatekoa IFK\/IFZ gabe",
     "minimum-stock": "Stock minimoa",
     "minutes": "Minutuak",
     "mismatched-accounting-entry": "Idazpen desorekatua",
