--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -595,6 +595,7 @@
     "footer-text": "Fusszeilen Text",
     "for-admins": "Para administradores",
     "for-all": "Para todos",
+    "for-all-exercises": "Para todos los ejercicios",
     "for-purchase": "Zum Verkauf",
     "for-sale": "Zu verkaufen",
     "foresee": "vorhersehen",
@@ -877,6 +878,8 @@
     "marked-as-homepage": "Als Homepage markiert",
     "max-input-vars-warning": "max-input-vars-warning",
     "max-risk": "max-risk",
+    "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
+    "maximum-amount-without-cifnif": "Máximo importe sin CIF\/NIF",
     "maximum-stock": "Höchstbestand",
     "may": "Mayo",
     "mega-search": "MegaBuscador",
@@ -894,6 +897,8 @@
     "meta-description": "FacturaScripts ist ein Billing und Accounting-Software für kleine Unternehmen. Es ist freie Software unter der GNU\/LGPL Lizenz.",
     "method-payment": "Zahlungsart",
     "mime-type": "Mime Type",
+    "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
+    "minimum-amount-without-cifnif": "Mínimo importe sin CIF\/NIF",
     "minimum-stock": "Mindestbestand",
     "minutes": "Minutes",
     "mismatched-accounting-entry": "mismatched-accounting-entry",
