--- a/Core/Translation/es_GT.json
+++ b/Core/Translation/es_GT.json
@@ -595,6 +595,7 @@
     "footer-text": "Texto pié de página",
     "for-admins": "Para administradores",
     "for-all": "Para todos",
+    "for-all-exercises": "Para todos los ejercicios",
     "for-purchase": "Se compra",
     "for-sale": "Se vende",
     "foresee": "Preveer",
@@ -877,6 +878,8 @@
     "marked-as-homepage": "Marcada como página de inicio. Pulsa de nuevo para desmarcar.",
     "max-input-vars-warning": "Con la configuración actual de PHP (max_input_vars) no podrás trabajar con documentos de más de %numlines% líneas.",
     "max-risk": "Crédito máximo",
+    "maximum-amount-with-cifnif": "Máximo importe con NIT\/DPI",
+    "maximum-amount-without-cifnif": "Máximo importe sin NIT\/DPI",
     "maximum-stock": "Stock máximo",
     "may": "Mayo",
     "mega-search": "MegaBuscador",
@@ -894,6 +897,8 @@
     "meta-description": "FacturaScripts es un software de facturación y contabilidad para pymes. Es software libre bajo licencia GNU\/LGPL.",
     "method-payment": "Forma de pago",
     "mime-type": "Mime Type",
+    "minimum-amount-with-cifnif": "Mínimo importe con NIT\/DPI",
+    "minimum-amount-without-cifnif": "Mínimo importe sin NIT\/DPI",
     "minimum-stock": "Stock mínimo",
     "minutes": "Minutos",
     "mismatched-accounting-entry": "Asiento descuadrado",
