--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -595,6 +595,7 @@
     "footer-text": "Texte du pied",
     "for-admins": "Pour les administrateurs",
     "for-all": "Pour tout le monde",
+    "for-all-exercises": "Para todos los ejercicios",
     "for-purchase": "Pour l'achat",
     "for-sale": "À vendre",
     "foresee": "Prévoir",
@@ -877,6 +878,8 @@
     "marked-as-homepage": "Marqué comme page d'accueil. Cliquez à nouveau pour annuler.",
     "max-input-vars-warning": "Avec la configuration PHP actuelle (max_input_vars), vous ne pourrez pas travailler avec des documents contenant plus de %numlines% lignes.",
     "max-risk": "Risque max.",
+    "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
+    "maximum-amount-without-cifnif": "Máximo importe sin CIF\/NIF",
     "maximum-stock": "Stock maximum",
     "may": "Mayo",
     "mega-search": "MegaBuscador",
@@ -894,6 +897,8 @@
     "meta-description": "FacturaScripts est un logiciel de facturation et de comptabilité pour pymes. C'est un logiciel libre sous licence GNU \/ LGPL.",
     "method-payment": "Moyen de paiement",
     "mime-type": "Type MIME",
+    "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
+    "minimum-amount-without-cifnif": "Mínimo importe sin CIF\/NIF",
     "minimum-stock": "Stock minimum",
     "minutes": "Minutes",
     "mismatched-accounting-entry": "Entrée comptable non concordante",
