--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -595,6 +595,7 @@
     "footer-text": "Texto pé de páxina",
     "for-admins": "Para administradores",
     "for-all": "Para todos",
+    "for-all-exercises": "Para todos los ejercicios",
     "for-purchase": "Para compra",
     "for-sale": "En venda",
     "foresee": "Prever",
@@ -877,6 +878,8 @@
     "marked-as-homepage": "Marcado como páxina de inicio. Pulsa de novo para desmarcar.",
     "max-input-vars-warning": "Coa configuración actual de PHP (max_input_vars) non poderás traballar con documentos de máis de %numlines% líneas.",
     "max-risk": "Risco máximo",
+    "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
+    "maximum-amount-without-cifnif": "Máximo importe sen CIF\/NIF",
     "maximum-stock": "Máximo stock",
     "may": "Mayo",
     "mega-search": "MegaBuscador",
@@ -894,6 +897,8 @@
     "meta-description": "FacturaScripts é un software de facturación e contabilidade para pemes. É software libre baixo licencia GNU\/LGPL.",
     "method-payment": "Método de pagamento",
     "mime-type": "Mime Type",
+    "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
+    "minimum-amount-without-cifnif": "Mínimo importe sen CIF\/NIF",
     "minimum-stock": "Stock mínimo",
     "minutes": "Minutos",
     "mismatched-accounting-entry": "Asento descuadrado",
