--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -595,6 +595,7 @@
     "footer-text": "footer-text",
     "for-admins": "Para administradores",
     "for-all": "Para todos",
+    "for-all-exercises": "Para todos los ejercicios",
     "for-purchase": "Per l'acquisto",
     "for-sale": "In vendita",
     "foresee": "Foresee",
@@ -877,6 +878,8 @@
     "marked-as-homepage": "Contrassegnato come homepage",
     "max-input-vars-warning": "max-input-vars-warning",
     "max-risk": "Rischio massimo",
+    "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
+    "maximum-amount-without-cifnif": "Máximo importe sin CIF\/NIF",
     "maximum-stock": "Scorte massime",
     "may": "Mayo",
     "mega-search": "MegaBuscador",
@@ -894,6 +897,8 @@
     "meta-description": "FacturaScripts è un software di fatturazione e contabilità per le piccole imprese. Si tratta di software libero sotto licenza GNU \/ LGPL.",
     "method-payment": "Metodo di pagamento",
     "mime-type": "Mime Type",
+    "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
+    "minimum-amount-without-cifnif": "Mínimo importe sin CIF\/NIF",
     "minimum-stock": "Scorta minima",
     "minutes": "Minutes",
     "mismatched-accounting-entry": "mismatched-accounting-entry",
