--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -595,6 +595,7 @@
     "footer-text": "Texto do rodapé",
     "for-admins": "Para administradores",
     "for-all": "Para todos",
+    "for-all-exercises": "Para todos los ejercicios",
     "for-purchase": "Para compra",
     "for-sale": "À venda",
     "foresee": "Foresee",
@@ -877,6 +878,8 @@
     "marked-as-homepage": "Marcado como página inicial",
     "max-input-vars-warning": "max-input-vars-warning",
     "max-risk": "max-risk",
+    "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
+    "maximum-amount-without-cifnif": "Máximo importe sin CIF\/NIF",
     "maximum-stock": "Estoque máximo",
     "may": "Mayo",
     "mega-search": "MegaBuscador",
@@ -894,6 +897,8 @@
     "meta-description": "FacturaScripts é um software de contabilidade e contabilidade para as PMEs. É um software livre sob a licença GNU \/ LGPL.",
     "method-payment": "Método de pagamento",
     "mime-type": "Mime Type",
+    "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
+    "minimum-amount-without-cifnif": "Mínimo importe sin CIF\/NIF",
     "minimum-stock": "Estoque mínimo",
     "minutes": "Minutes",
     "mismatched-accounting-entry": "mismatched-accounting-entry",
