--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -595,6 +595,7 @@
     "footer-text": "Footer text",
     "for-admins": "Para administradores",
     "for-all": "Para todos",
+    "for-all-exercises": "Para todos los ejercicios",
     "for-purchase": "Per a comprar",
     "for-sale": "Per a vendre",
     "foresee": "Prevore",
@@ -877,6 +878,8 @@
     "marked-as-homepage": "Marcat com a pàgina d'inici",
     "max-input-vars-warning": "Amb la configuració actual de PHP (max_input_vars) no podràs treballar amb documents de més de %numlines% línies.",
     "max-risk": "Risc màxim",
+    "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
+    "maximum-amount-without-cifnif": "Máximo importe sin CIF\/NIF",
     "maximum-stock": "Estoc màxim",
     "may": "Mayo",
     "mega-search": "MegaBuscador",
@@ -894,6 +897,8 @@
     "meta-description": "FacturaScripts és un software de facturació i contabilitat per a xicotetes i mitjanes empreses. És software lliure baix la llicència GNU\/LGPL.",
     "method-payment": "Forma de pagament",
     "mime-type": "Mime Type",
+    "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
+    "minimum-amount-without-cifnif": "Mínimo importe sin CIF\/NIF",
     "minimum-stock": "Estoc mínim",
     "minutes": "Minutes",
     "mismatched-accounting-entry": "mismatched-accounting-entry",
