Añadida advertencia de referencia duplicada en productos y variantes.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -460,6 +460,7 @@
     "dto": "Dte.",
     "dto-2": "Dte. 2",
     "duplicate-record": "Registre Duplicat",
+    "duplicated-reference": "Referencia '%reference%' duplicada",
     "duplicated-request": "Petició duplicada",
     "duration": "Durada",
     "edit": "Editar",
