--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -460,6 +460,7 @@
     "dto": "Dto.",
     "dto-2": "Desconto 2",
     "duplicate-record": "Rexistro duplicado",
+    "duplicated-reference": "Referencia '%reference%' duplicada",
     "duplicated-request": "Petición duplicada",
     "duration": "duración",
     "edit": "Editar",
