--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -976,6 +976,7 @@
     "not-allowed-modify": "You do not have permission to modify",
     "not-enough-stock": "Not enough stock of %reference%",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>get more details here<\/a>.",
+    "not-stored-content": "Contenido no almacenado",
     "not-valid-email": "Invalid email %email%",
     "not-valid-fiscal-number": "The %type% %number% is not valid",
     "not-valid-percentage-retention": "Not valid percentage retention",
