--- a/Core/Translation/es_PA.json
+++ b/Core/Translation/es_PA.json
@@ -976,6 +976,7 @@
     "not-allowed-modify": "No tiene permiso para modificar",
     "not-enough-stock": "No hay suficiente stock de %reference%",
     "not-passed-integrity-check": "Algunos archivos no han pasado la verificación de integridad ... <br\/>Puedes <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtener más detalles aquí<\/a>.",
+    "not-stored-content": "Contenido no almacenado",
     "not-valid-email": "Email %email% no válido",
     "not-valid-fiscal-number": "El %type% %number% no es válido",
     "not-valid-percentage-retention": "Porcentaje no válido. Debe ser mayor de 0.00",
