--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -976,6 +976,7 @@
     "not-allowed-modify": "Vous n'êtes pas autorisé à modifier",
     "not-enough-stock": "Stock insuffisant pour %reference%",
     "not-passed-integrity-check": "Certains fichiers n'ont pas passé le test d'intégrité...<br\\\/>Vous pouvez <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtenir plus de détails ici<\/a>.",
+    "not-stored-content": "Contenido no almacenado",
     "not-valid-email": "Adresse e-mail incorrecte %email%",
     "not-valid-fiscal-number": "Le %type% %number% n'est pas valable",
     "not-valid-percentage-retention": "Pourcentage de rétention incorrect",
