--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -976,6 +976,7 @@
     "not-allowed-modify": "No té permís per a modificar",
     "not-enough-stock": "No hi ha suficient estoc de %reference%",
     "not-passed-integrity-check": "Alguns archius no han passat la verificació d'integritat ... <br\/>Pots <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtindre més detalls ací<\/a>.",
+    "not-stored-content": "Contenido no almacenado",
     "not-valid-email": "La direcció de correu %email% no és vàlida",
     "not-valid-fiscal-number": "El %type% %number% no és vàlit",
     "not-valid-percentage-retention": "El percentage ha de ser major de 0.0",
