--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1027,6 +1027,8 @@
     "page": "Páxina",
     "page-break": "Salto de páxina",
     "page-configuration": "Páxina de configuración",
+    "page-not-found": "Páxina non atopada",
+    "page-not-found-p": "Non encontramos a páxina que busca.",
     "page-option-info": "Dende aquí podes modificar os campos visibles neste listado ou formulario",
     "page-total-amount": "Total da páxina",
     "pagename": "Nome da páxina",
