--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1027,6 +1027,8 @@
     "page": "Seite",
     "page-break": "Salto de página",
     "page-configuration": "Seiteneinstellung",
+    "page-not-found": "Página no encontrada",
+    "page-not-found-p": "No hemos encontrado la página que busca.",
     "page-option-info": "Desde aquí puedes modificar los campos visibles en este listado o formulario",
     "page-total-amount": "Gesamt Seite",
     "pagename": "Seitenname",
