--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1027,6 +1027,8 @@
     "page": "pagina",
     "page-break": "Salto de página",
     "page-configuration": "Configuration Page",
+    "page-not-found": "Página no encontrada",
+    "page-not-found-p": "No hemos encontrado la página que busca.",
     "page-option-info": "Desde aquí puedes modificar los campos visibles en este listado o formulario",
     "page-total-amount": "page-total-amount",
     "pagename": "Nome della pagina",
