--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1027,6 +1027,8 @@
     "page": "Página",
     "page-break": "Salto de página",
     "page-configuration": "Página de Configuraç",
+    "page-not-found": "Página no encontrada",
+    "page-not-found-p": "No hemos encontrado la página que busca.",
     "page-option-info": "Desde aquí puedes modificar los campos visibles en este listado o formulario",
     "page-total-amount": "page-total-amount",
     "pagename": "Nome da página",
