--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1027,6 +1027,8 @@
     "page": "Pàgina",
     "page-break": "Salto de página",
     "page-configuration": "Pàgina de configuració",
+    "page-not-found": "Página no encontrada",
+    "page-not-found-p": "No hemos encontrado la página que busca.",
     "page-option-info": "Desde aquí puedes modificar los campos visibles en este listado o formulario",
     "page-total-amount": "Total de la pàgina",
     "pagename": "Nom de la pàgina",
