--- a/Core/Data/Lang/EN/cuentasesp.csv
+++ b/Core/Data/Lang/EN/cuentasesp.csv
@@ -1,32 +1,35 @@
 codcuentaesp;descripcion
-"IVAACR";"Credit accounts in VAT regularization"
-"IVAREP";"VAT accounts charged"
-"IVARUE";"VAT accounts charged UE"
-"IVARXP";"VAT accounts charged in exports"
-"IVAREX";"VAT accounts charged to customers exempt from VAT"
-"IVASOP";"VAT accounts supported"
-"IVASUE";"VAT accounts supported UE"
-"IVASIM";"VAT accounts supported in exports"
 "ACREED";"Accounts of creditors"
+"ANTCLI";"Anticipos de clientes"
 "CAJA";"Cash accounts"
-"CLIENT";"Customer Accounts"
-"COMPRA";"Purchase accounts"
 "CAMNEG";"Negative exchange difference accounts"
 "CAMPOS";"Positive exchange differences accounts"
-"PROVEE";"Suppliers accounts"
-"IRPF";"IRPF withholding accounts"
-"IRPFPR";"IRPFPR for providers withholding accounts"
-"VENTAS";"Sales accounts"
-"IVADEU";"Debit accounts in VAT regularization"
-"EURNEG";"Negative exchange differences to the local currency accounts"
-"EURPOS";"Positive exchange differences to the local currency accounts"
-"DIVPOS";"Positive differences in foreign currency accounts"
-"PREVIO";"Positive differences in previous exercise accounts"
-"PRENEG";"Negative differences in previous exercise accounts"
+"CLIENT";"Customer Accounts"
+"COMPRA";"Purchase accounts"
 "DEVCOM";"Purchase returns"
 "DEVVEN";"Sales returns"
-"GTORF";"Expenses for financial surcharge"
+"DIVPOS";"Positive differences in foreign currency accounts"
+"EURNEG";"Negative exchange differences to the local currency accounts"
+"EURPOS";"Positive exchange differences to the local currency accounts"
 "GTOBAN";"Banking expenses"
-"IVAEUE";"VAT in intra-community UE deliveries "
+"GTORF";"Expenses for financial surcharge"
 "INGRF";"Income from financial surcharge"
+"IRPF";"IRPF withholding accounts"
+"IRPFA";"IRPF para alquileres"
+"IRPFPR";"IRPFPR for providers withholding accounts"
+"IVAACR";"Credit accounts in VAT regularization"
+"IVADEU";"Debit accounts in VAT regularization"
+"IVAEUE";"VAT in intra-community UE deliveries "
+"IVAREP";"VAT accounts charged"
+"IVAREX";"VAT accounts charged to customers exempt from VAT"
+"IVARUE";"VAT accounts charged UE"
+"IVARXP";"VAT accounts charged in exports"
+"IVASIM";"VAT accounts supported in exports"
+"IVASOP";"VAT accounts supported"
+"IVASUE";"VAT accounts supported UE"
+"PRENEG";"Negative differences in previous exercise accounts"
+"PREVIO";"Positive differences in previous exercise accounts"
+"PROVEE";"Suppliers accounts"
 "PYG";"Profit and loss"
+"SUPLI";"Suplidos"
+"VENTAS";"Sales accounts"
