Solucionado bug con las rutas guardadas con posiciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -460,7 +460,7 @@
     "dto": "Dte.",
     "dto-2": "Dte. 2",
     "duplicate-record": "Registre Duplicat",
-    "duplicated-reference": "Referencia '%reference%' duplicada",
+    "duplicated-reference": "Referència '%reference%' duplicada",
     "duplicated-request": "Petició duplicada",
     "duration": "Durada",
     "edit": "Editar",
@@ -596,7 +596,7 @@
     "footer-text": "Text peu de pàgina",
     "for-admins": "Per administradors",
     "for-all": "Per a tothom",
-    "for-all-exercises": "Para todos los ejercicios",
+    "for-all-exercises": "Per a tots els exercicis",
     "for-purchase": "Es compra",
     "for-sale": "És a la venda",
     "foresee": "Preveure",
@@ -728,7 +728,7 @@
     "invalid-date-there-are-invoices-after": "Data no vàlida. Ja hi ha factures amb data posterior a %date%",
     "invalid-date-there-are-invoices-before": "Data no vàlida. La data %date% és posterior a la data de la factura següent.",
     "invalid-iban": "IBAN no vàlid: %iban%",
-    "invalid-iso-code": "Código ISO ''%iso-code% no válido",
+    "invalid-iso-code": "Codi ISO ''%iso-*code% no vàlid",
     "invalid-number": "Número no vàlid: %number%",
     "invalid-request": "Petició no vàlida",
     "invalid-user-can-permission": "Permís no vàlid: %permission%. Els permisos disponibles són access, delete, export, import, update i only-owner-data.",
@@ -817,8 +817,8 @@
     "ledger": "Diari",
     "left": "Esquerra",
     "level": "Nivell",
-    "level-benefit-sales": "Nivel para ver beneficios",
-    "level-cost-sales": "Nivel para ver costes",
+    "level-benefit-sales": "Nivell per a veure beneficis",
+    "level-cost-sales": "Nivell per a veure costos",
     "level1": "Nivell 1",
     "level2": "Nivell 2",
     "level3": "Nivell 3",
@@ -964,7 +964,7 @@
     "no-invoice": "Sense factura",
     "no-outstanding-amount": "No hi ha import pendent",
     "no-print-permission": "No teniu permís per imprimir o exportar",
-    "no-reference": "Sin referencia",
+    "no-reference": "Sense referència",
     "no-selected-item": "Cap element seleccionat",
     "no-stock": "No controlar stock",
     "non-editable-accounting-entry": "Assentament no editable",
@@ -976,7 +976,7 @@
     "not-allowed-modify": "No té permís per a modificar",
     "not-enough-stock": "No hi ha prou estoc de %reference%",
     "not-passed-integrity-check": "Alguns arxius no han passat la verificació d'integritat ... <br\/>Pots <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtenir més detalls aquí<\/a>.",
-    "not-stored-content": "Contenido no almacenado",
+    "not-stored-content": "Contingut no emmagatzemat",
     "not-valid-email": "E-mail %email% no vàlid",
     "not-valid-fiscal-number": "El %type% %number% no és vàlid",
     "not-valid-percentage-retention": "Percentatge no vàlid. Ha de ser major de 0.00",
@@ -987,7 +987,7 @@
     "notifications": "Notificacions",
     "november": "Novembre",
     "number": "Número",
-    "number-attachments": "Nº de adjuntos",
+    "number-attachments": "Núm. d'adjunts",
     "number-length": "Longitud del nombre",
     "number-recipients": "Nº perceptors",
     "number2": "Número 2",
@@ -1060,7 +1060,7 @@
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "% Recàrrec",
-    "pct-tax": "% impuestos",
+    "pct-tax": "% impostos",
     "pct-vat": "% Impost",
     "pending": "Pendent",
     "pending-invoices-button": "Fact. Pends.",
@@ -1139,7 +1139,7 @@
     "profile": "Perfil",
     "profit-and-loss": "Pèrdues i Guanys",
     "profit-and-loss-balance": "Balanç de Pèrdues i Guanys",
-    "profits": "Beneficios",
+    "profits": "Beneficis",
     "project": "Projecte",
     "projects": "Projectes",
     "provider-reference": "Referència del proveïdor",
@@ -1219,7 +1219,7 @@
     "report": "Informe",
     "report-grouping-account": "Agrupa per comptes",
     "report-non-grouping-account": "No agrupar per comptes",
-    "report-taxes-p": "Este informe permite obtener el desglose de impuestos de las facturas de compra o de venta del rango seleccionado",
+    "report-taxes-p": "Aquest informe permet obtenir el desglossament d'impostos de les factures de compra o de venda del rang seleccionat",
     "reports": "Informes",
     "request-sent": "Petició enviada",
     "requires-core": "Requereix FacturaScripts %version%",
@@ -1329,7 +1329,7 @@
     "stock-transfers": "Transferències d'existències",
     "stockmax": "Estoc màx.",
     "stockmin": "Estoc mín.",
-    "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
+    "storage-limit-almost": "Límit d'emmagatzematge gairebé aconseguit (%limit%). Queden %free%",
     "storage-limit-reached": "Límit d'emmagatzematge assolit",
     "structured-data-csv": "Fitxer CSV",
     "sub-account": "Subcompte",
@@ -1504,14 +1504,14 @@
     "vat": "IVA",
     "vat-document": "Document",
     "vat-exception": "Excepció d'IVA",
-    "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
-    "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
+    "vat-number-is-short": "El número '%vat-*number%' és massa curt",
+    "vat-number-not-vies": "El número '%vat-*number%' no està registrat en el sistema VIES",
     "vat-regime": "Règim de l'IVA",
     "VAT-register": "Impostos",
     "vat-regularization": "Regularització d'IVA",
     "verified": "Verificat",
     "version": "Versió",
-    "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
+    "vies-check-success": "El número '%vat-*number%' està registrat en el sistema VIES",
     "view-column-net-subtotal": "Veure columna subtotal o net",
     "warehouse": "Magatzem",
     "warehouse-cant-be-same": "El magatzem d'origen i destí no pot ser el mateix.",
