Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -563,6 +563,7 @@
     "fax": "Fax",
     "february": "Febrer",
     "field-can-not-be-null": "El camp %fieldName% de la taula %tableName% no pot ser nul",
+    "field-required": "Camp requerit: %field%",
     "fields": "Camps",
     "file": "Fitxer",
     "file-name": "Nom d'arxiu",
@@ -1419,6 +1420,7 @@
     "this-year": "Aquest any",
     "thousands-separator": "Milers",
     "thursday": "Dijous",
+    "ticket": "Tiquet",
     "time": "Hora",
     "timezone": "Zona horària",
     "title": "Títol",
@@ -1509,6 +1511,7 @@
     "vat-regime": "Règim de l'IVA",
     "VAT-register": "Impostos",
     "vat-regularization": "Regularització d'IVA",
+    "vehicle": "Vehicle",
     "verified": "Verificat",
     "version": "Versió",
     "vies-check-success": "El número '%vat-*number%' està registrat en el sistema VIES",
