--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -563,6 +563,7 @@
     "fax": "Fax",
     "february": "February",
     "field-can-not-be-null": "Field %fieldName% on table %tableName% can't be null",
+    "field-required": "Field required: %field%",
     "fields": "Fields",
     "file": "File",
     "file-name": "File name",
@@ -1419,6 +1420,7 @@
     "this-year": "This year",
     "thousands-separator": "Thousands separator",
     "thursday": "Thursday",
+    "ticket": "Ticket",
     "time": "Time",
     "timezone": "Time zone",
     "title": "Title",
@@ -1509,6 +1511,7 @@
     "vat-regime": "VAT Regime",
     "VAT-register": "VAT registration",
     "vat-regularization": "VAT Regularization",
+    "vehicle": "Vehicle",
     "verified": "Verified",
     "version": "Version",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
