--- a/Core/Translation/es_EC.json
+++ b/Core/Translation/es_EC.json
@@ -563,6 +563,7 @@
     "fax": "Fax",
     "february": "Febrero",
     "field-can-not-be-null": "El campo %fieldName% de la tabla %tableName% no puede ser nulo",
+    "field-required": "Campo requerido: %field%",
     "fields": "Campos",
     "file": "Archivo",
     "file-name": "Nombre de archivo",
@@ -1419,6 +1420,7 @@
     "this-year": "Este año",
     "thousands-separator": "Separador de miles",
     "thursday": "Jueves",
+    "ticket": "Ticket",
     "time": "Hora",
     "timezone": "Zona horaria",
     "title": "Título",
@@ -1509,6 +1511,7 @@
     "vat-regime": "Régimen impuestos",
     "VAT-register": "Impuestos",
     "vat-regularization": "Regularización de IVA",
+    "vehicle": "Vehículo",
     "verified": "Verificado",
     "version": "Versión",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
