--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -563,6 +563,7 @@
     "fax": "Faxa",
     "february": "Febrero",
     "field-can-not-be-null": "%fieldName% eremua %tableName% taulan ezin da nulua izan",
+    "field-required": "Beharrezko eremua: %field%",
     "fields": "Eremuak",
     "file": "Artxiboa",
     "file-name": "Artxiboaren izena",
@@ -1419,6 +1420,7 @@
     "this-year": "Aurten",
     "thousands-separator": "Milakoen banatzailea",
     "thursday": "Osteguna",
+    "ticket": "Tiketa",
     "time": "Ordua",
     "timezone": "Ordu-zona",
     "title": "Izenburua",
@@ -1509,6 +1511,7 @@
     "vat-regime": "BEZ erregimena",
     "VAT-register": "Zerga liburua",
     "vat-regularization": "BEZ erregularizazioa",
+    "vehicle": "Ibilgailua",
     "verified": "Egiaztatua",
     "version": "Bertsioa",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
