--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -563,6 +563,7 @@
     "fax": "Fax",
     "february": "Febrero",
     "field-can-not-be-null": "Le champ %fieldName% du tableau %tableName% ne peut être nul",
+    "field-required": "Campo requerido: %field%",
     "fields": "Campos",
     "file": "Fichier",
     "file-name": "Nom du fichier",
@@ -1419,6 +1420,7 @@
     "this-year": "Cette année",
     "thousands-separator": "Séparateur de milliers",
     "thursday": "Jeudi",
+    "ticket": "Ticket",
     "time": "Heure",
     "timezone": "Sélectionner le fuseau horaire",
     "title": "Titre",
@@ -1509,6 +1511,7 @@
     "vat-regime": "Régime de TVA",
     "VAT-register": "Livre d'impôt",
     "vat-regularization": "Régularisation de la TVA",
+    "vehicle": "Véhicule",
     "verified": "vérifié",
     "version": "Version",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
