--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -563,6 +563,7 @@
     "fax": "Fax",
     "february": "Febrero",
     "field-can-not-be-null": "O campo %fieldName% da táboa %tableName% non pode ser nulo",
+    "field-required": "Campo requerido: %field%",
     "fields": "Campos",
     "file": "Arquivo",
     "file-name": "Nome de arquivo",
@@ -1419,6 +1420,7 @@
     "this-year": "Este ano",
     "thousands-separator": "Separador de millares",
     "thursday": "Xoves",
+    "ticket": "Ticket",
     "time": "Hora",
     "timezone": "Zona horaria",
     "title": "Título",
@@ -1509,6 +1511,7 @@
     "vat-regime": "Réxime do IVE",
     "VAT-register": "Libro de impostos",
     "vat-regularization": "Regularización de Impostos",
+    "vehicle": "Vehículo",
     "verified": "verificado",
     "version": "Versión",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
