--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -563,6 +563,7 @@
     "fax": "Fax",
     "february": "Febrero",
     "field-can-not-be-null": "Field %fieldName% on table %tableName% can't be null",
+    "field-required": "Campo requerido: %field%",
     "fields": "Campos",
     "file": "archivio",
     "file-name": "Nome del file",
@@ -1419,6 +1420,7 @@
     "this-year": "Quest'anno",
     "thousands-separator": "migliaia",
     "thursday": "thursday",
+    "ticket": "Ticket",
     "time": "Time",
     "timezone": "Seleziona il fuso orario",
     "title": "Titolo",
@@ -1509,6 +1511,7 @@
     "vat-regime": "Regime IVA",
     "VAT-register": "Partita IVA",
     "vat-regularization": "VAT Regularization",
+    "vehicle": "Vehículo",
     "verified": "verified",
     "version": "versione",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
