--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -563,6 +563,7 @@
     "fax": "Fax",
     "february": "Febrero",
     "field-can-not-be-null": "Field %fieldName% on table %tableName% can't be null",
+    "field-required": "Campo requerido: %field%",
     "fields": "Campos",
     "file": "Arquivo",
     "file-name": "Nome do ficheiro",
@@ -1419,6 +1420,7 @@
     "this-year": "Este ano",
     "thousands-separator": "Milhares",
     "thursday": "quinta-feira",
+    "ticket": "Ticket",
     "time": "Hora",
     "timezone": "Selecione fuso horário",
     "title": "Título",
@@ -1509,6 +1511,7 @@
     "vat-regime": "Regime de IVA",
     "VAT-register": "VAT registration",
     "vat-regularization": "VAT Regularization",
+    "vehicle": "Vehículo",
     "verified": "verified",
     "version": "Versão",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
