--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -563,6 +563,7 @@
     "fax": "Fax",
     "february": "Febrero",
     "field-can-not-be-null": "El camp %fieldName% de la taula %tableName% no pot ser nul",
+    "field-required": "Campo requerido: %field%",
     "fields": "Campos",
     "file": "Fitxer",
     "file-name": "Nom de l'archiu",
@@ -1419,6 +1420,7 @@
     "this-year": "Enguany",
     "thousands-separator": "Separador de millars",
     "thursday": "thursday",
+    "ticket": "Ticket",
     "time": "Hora",
     "timezone": "Selecciona la zona horària",
     "title": "Títul",
@@ -1509,6 +1511,7 @@
     "vat-regime": "Règim de l'IVA",
     "VAT-register": "Llibre d'imposts",
     "vat-regularization": "Regularització de l'IVA",
+    "vehicle": "Vehículo",
     "verified": "Verificat",
     "version": "Versió",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
