--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -563,6 +563,7 @@
     "fax": "Fax",
     "february": "Febrero",
     "field-can-not-be-null": "Das Feld %fieldName% der Tabelle %tableName% kann nicht Null sein",
+    "field-required": "Campo requerido: %field%",
     "fields": "Campos",
     "file": "archivieren",
     "file-name": "Dateiname",
@@ -1419,6 +1420,7 @@
     "this-year": "this-year",
     "thousands-separator": "Tausende",
     "thursday": "thursday",
+    "ticket": "Ticket",
     "time": "Time",
     "timezone": "Wähle Zeitzone aus",
     "title": "Title",
@@ -1509,6 +1511,7 @@
     "vat-regime": "MwSt-Regelung",
     "VAT-register": "Steuerbuch",
     "vat-regularization": "MwSt Regulierung",
+    "vehicle": "Fahrzeug",
     "verified": "geprüft",
     "version": "Version",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
